--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -31,7 +31,9 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
+    "mysql2": "^2.2.5",
     "rxjs": "~6.6.0",
+    "sequelize": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
