--- a/angular-frontend/tsconfig.server.json
+++ b/angular-frontend/tsconfig.server.json
@@ -12,7 +12,8 @@
     "src/main.server.ts",
     "server.ts"
   ],
-  "angularCompilerOptions": {
-    "entryModule": "./src/app/app.server.module#AppServerModule"
-  }
+  //TODO
+//  "angularCompilerOptions": {
+//    "entryModule": "./src/app/app.server.module#AppServerModule"
+//  }
 }
