--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
     "mysql2": "^2.2.5",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "sequelize": "^6.6.2",
     "tslib": "^2.0.0",
