--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.ts",
+    "heroku-postbuild": "ng build --prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -33,6 +34,7 @@
     "mongoose": "^5.12.2",
     "mysql2": "^2.2.5",
     "ngx-pagination": "^5.0.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "sequelize": "^6.6.2",
     "tslib": "^2.0.0",
@@ -58,5 +60,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "12.12.0",
+    "npm": "6.12.0"
   }
 }
