--- a/angular-frontend/angular.json
+++ b/angular-frontend/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/codemirror/lib/codemirror.css",
+              "./node_modules/@toast-ui/editor/dist/toastui-editor.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/codemirror/lib/codemirror.js",
+              "./node_modules/@toast-ui/editor/dist/toastui-editor.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -64,7 +70,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-study:build"
+            "browserTarget": "angular-study:build",
+            "port": 5000
           },
           "configurations": {
             "production": {
