--- a/angular-frontend/angular.json
+++ b/angular-frontend/angular.json
@@ -30,11 +30,13 @@
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/codemirror/lib/codemirror.css",
-              "./node_modules/@toast-ui/editor/dist/toastui-editor.css"
+              "./node_modules/@toast-ui/editor/dist/toastui-editor.css",
+              "./node_modules/@toast-ui/editor/dist/toastui-editor-viewer.css"
             ],
             "scripts": [
               "./node_modules/codemirror/lib/codemirror.js",
-              "./node_modules/@toast-ui/editor/dist/toastui-editor.js"
+              "./node_modules/@toast-ui/editor/dist/toastui-editor.js",
+              "./node_modules/@toast-ui/editor/dist/toastui-editor-viewer.js"
             ]
           },
           "configurations": {
